--- a/P4B/README
+++ b/P4B/README
@@ -14,3 +14,6 @@ README - a README file containing:
     descriptions of each of the included files
     any other comments on your submission that you would like to bring to our attention (e.g., research, limitations, features, testing methodology).
 ---
+Comments:
+    This board is a poor product. We should not use it.
+---
